# SolidarIA

./: .gitignore  .gitmessage  README.md  pyproject.toml
data/json_response/: search_item_ref_response.json  search_response.json
logs/: log.txt
scripts/: commit_msg_agent.py
src/: logger.py
src/domain/: authentification_ebay.py  decision_engine.py  listing.py  llm_analysis.py  policy.py  recommendation.py
src/infra/ebay/: authentification_ebay.py
tests/domain/: test_authentification_ebay.py  test_decision_engine.py  test_listing.py  test_policy.py
tests/infra/ebay/: test_authentification_ebay.py  test_ebay_listing.py
